2003-05-18    <karl@gnu.org>

	* lib/xexit.c (xexit): fputs not fprintf, so we get newline;
	translate the messages, too.  Report from Jim Meyering.

	* util/dir-example: move gcc/automake entries.

	* pretest version 4.5.92.

	* update to automake 1.7.5.

	* makeinfo/html.c (append_char): forgot to increment length, duh.
	Report from: "Torsten Bronger" <bronger@physik.rwth-aachen.de>,
	18 May 2003 14:36:23 +0200.

2003-05-17    <karl@gnu.org>

	* makeinfo/makeinfo.c (defining_copying): new fn.
	(add_char): call it, when testing if we should
	call html_output_head.
	Report from: Torsten Bronger <bronger@physik.rwth-aachen.de>,
	17 May 2003 22:10:42 +0200.

	* configure.ac: pretest version 4.5.91.

2003-05-16    <karl@gnu.org>

	* makeinfo/index.c (sort_index): don't deref NULL.  Report from Jan.

2003-05-13    <karl@gnu.org>

	* makeinfo/html.c (append_char): appease sgi compiler.
	* makeinfo/html.c (insert_html_tag): remove spurious arg to pop_tag,
	From: ezra peisach <epeisach@med-xtal.bu.edu>, 13
	May 2003 12:13:40 -0400.

	Fix a few GCC warnings, reported by Jim Meyering:

	* info/nodes.c: parenthesize assignment used as truth value.
	* info/nodemenu.c (format_node_info): strcpy instead of sprintf,
		since there's no format.
	* makeinfo/makeinfo.c (isolate_nodename): remove spurious decl.
	* makeinfo/xml.c (xml_insert_indexterm): declare as void.
	* info/key.c: initialize with 0,0 at end.
	* info/infokey.c (main): return instead of xexit, and remove
	unused variable.
	* makeinfo/html.c (init_buffer): forgot to return buf.
	* info/info.c (remember_info_program_name): remove spurious
	declaration.

	* makeinfo/sectioning.c,
	* info/infomap.c: remove unused variables.

	* makeinfo/makeinfo.c (insert_toplevel_subdirectory),
	* info/man.c,
	* info/infodoc.c (info_find_or_create_help_window): parenthesize
	&& within ||.
	* info/display.c (display_update_one_window): initialize rep to
	NULL, parenthesize && within ||.

	* util/install-info.c,
	* info/info.c (main),